changed animation speed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="left">
             <div id="pizzaTitle">Veggie Supreme</div>
             <div id="pizzaDesc">Pizza loaded with tomato, onion, corn, olives and lots of cheese. Who doesn't love
-                vieggies and cheese?</div>
+                veggies and cheese?</div>
             <div class="sizeArea">
                 <div class="pizzaPrice">$<span id="pizzaPrice">12.99</span></div>
                 <div class="sizeDiv">Size
