temporary mobile banner added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         <div class="fBox" id="fBox5">Bacon</div>
         <div class="fBox" id="fBox6">Loaded</div>
     </div>
+    <!-- temporary -->
+    <div id="mobile">
+        <h1>Please use this website on desktop, laptop or tablet.</h1>
+    </div>
     <!-- scripts -->
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
     <script src="./js/script.js"></script>
