--- a/index.html
+++ b/index.html
@@ -15,47 +15,46 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <span class="iconify" data-icon="ri:menu-2-fill" data-inline="false" id="menuIcon"></span>
-        <img src="./img/pitzeria logo.svg" alt="Pitzeria Logo" id="logo">
-        <span class="iconify" data-icon="whh:foodtray" data-inline="false" id="foodTray"></span>
-    </nav>
-    <div class="mainArea">
-        <div class="left">
-            <div id="pizzaTitle">Veggie Supreme</div>
-            <div id="pizzaDesc">Pizza loaded with tomato, onion, corn, olives and lots of cheese. Who doesn't love
-                veggies and cheese?</div>
-            <div class="sizeArea">
-                <div class="pizzaPrice">$<span id="pizzaPrice">12.99</span></div>
-                <div class="sizeDiv">Size
-                    <select name="size" id="size">
-                        <option value="S">S</option>
-                        <option value="M" selected="selected">M</option>
-                        <option value="L">L</option>
-                        <option value="XL">XL</option>
-                    </select>
+    <div class="rContainer">
+        <nav class="navbar">
+            <span class="iconify" data-icon="ri:menu-2-fill" data-inline="false" id="menuIcon"></span>
+            <img src="./img/pitzeria logo.svg" alt="Pitzeria Logo" id="logo">
+            <span class="iconify" data-icon="whh:foodtray" data-inline="false" id="foodTray"></span>
+        </nav>
+        <div class="mainArea">
+            <div class="left">
+                <div id="pizzaTitle">Veggie Supreme</div>
+                <div id="pizzaDesc">Pizza loaded with tomato, onion, corn, olives and lots of cheese. Who doesn't love
+                    veggies and cheese?</div>
+                <div class="sizeArea">
+                    <div class="pizzaPrice">$<span id="pizzaPrice">8.99</span></div>
+                    <div class="sizeDiv">Size
+                        <select name="size" id="size" onchange="theSize(this)">
+                            <option value="S" selected="selected">S</option>
+                            <option value="M">M</option>
+                            <option value="L">L</option>
+                            <option value="XL">XL</option>
+                        </select>
+                    </div>
                 </div>
+                <button class="orderNow" id="order">
+                    Order Now
+                </button>
             </div>
-            <button class="orderNow" id="order">
-                Order Now
-            </button>
+            <div class="right">
+                <img src="./img/veggie-lover-pizza.jpg" alt="Veggie Lover Pizza" id="pizzaImg">
+            </div>
         </div>
-        <div class="right">
-            <img src="./img/veggie-lover-pizza.jpg" alt="Veggie Lover Pizza" id="pizzaImg">
+        <div id="footer">
+            <div class="fBox" id="fBox1">Pepperoni</div>
+            <div class="fBox" id="fBox2">Italiano</div>
+            <div class="fBox active" id="fBox3">Veggie</div>
+            <div class="fBox" id="fBox4">Canadian</div>
+            <div class="fBox" id="fBox5">Bacon</div>
+            <div class="fBox" id="fBox6">Loaded</div>
         </div>
     </div>
-    <div id="footer">
-        <div class="fBox" id="fBox1">Pepperoni</div>
-        <div class="fBox" id="fBox2">Italiano</div>
-        <div class="fBox active" id="fBox3">Veggie</div>
-        <div class="fBox" id="fBox4">Canadian</div>
-        <div class="fBox" id="fBox5">Bacon</div>
-        <div class="fBox" id="fBox6">Loaded</div>
-    </div>
-    <!-- temporary -->
-    <div id="mobile">
-        <h1>Please use this website on desktop, laptop or tablet.</h1>
-    </div>
+
     <!-- scripts -->
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
     <script src="./js/script.js"></script>
